Corretto il POM.
Corretto il POM in modo da evitare il lancio dell'eccezione durante lo
unit testing della GUI.

https://github.com/jacopos97/notebook-project/issues/13