@@ -65,6 +65,14 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.1.2</version>
+					<configuration>
+						<argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+					</configuration>
+				</plugin>
+				<plugin>
 					<artifactId>maven-surefire-report-plugin</artifactId>
 					<version>3.1.0</version>
 					<configuration>
